--- a/src/Toosame.EventBus/Toosame.EventBus.csproj
+++ b/src/Toosame.EventBus/Toosame.EventBus.csproj
@@ -7,6 +7,8 @@
     <Product>Toosame</Product>
     <Description>事件总线的抽象和接口</Description>
     <Version>1.0.5</Version>
+    <RepositoryUrl>https://github.com/lhdboy/Toosame.RabbitMQ</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
