--- a/src/Toosame.EventBus.RabbitMQ/Toosame.EventBus.RabbitMQ.csproj
+++ b/src/Toosame.EventBus.RabbitMQ/Toosame.EventBus.RabbitMQ.csproj
@@ -6,8 +6,8 @@
     <Authors>Toosame</Authors>
     <Product>Toosame</Product>
     <Description>事件总线的RabbitMQ实现</Description>
-    <Version>1.1.0</Version>
-    <RepositoryUrl>https://github.com/lhdboy/Toosame.RabbitMQ</RepositoryUrl>
+    <Version>1.1.1</Version>
+    <RepositoryUrl>https://github.com/lhdboy/Toosame.EventBus</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
