--- a/src/Toosame.EventBus/Toosame.EventBus.csproj
+++ b/src/Toosame.EventBus/Toosame.EventBus.csproj
@@ -6,8 +6,8 @@
     <Authors>Toosame</Authors>
     <Product>Toosame</Product>
     <Description>事件总线的抽象和接口</Description>
-    <Version>1.0.5</Version>
-    <RepositoryUrl>https://github.com/lhdboy/Toosame.RabbitMQ</RepositoryUrl>
+    <Version>1.0.6</Version>
+    <RepositoryUrl>https://github.com/lhdboy/Toosame.EventBus</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
