--- a/src/Toosame.EventBus/Toosame.EventBus.csproj
+++ b/src/Toosame.EventBus/Toosame.EventBus.csproj
@@ -1,12 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Toosame</Authors>
     <Product>Toosame</Product>
-    <Description>事件总线的抽象和接口</Description>
-    <Version>1.1.0</Version>
+    <Description>EventBus Abstraction and Interface</Description>
+    <Version>2.0.0</Version>
     <RepositoryUrl>https://github.com/lhdboy/Toosame.EventBus</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
