--- a/src/Toosame.EventBus/Toosame.EventBus.csproj
+++ b/src/Toosame.EventBus/Toosame.EventBus.csproj
@@ -1,14 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Authors>Toosame</Authors>
-    <Product>Toosame</Product>
-    <Description>EventBus Abstraction and Interface</Description>
-    <Version>2.0.1</Version>
-    <RepositoryUrl>https://github.com/lhdboy/Toosame.EventBus</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<Authors>Toosame</Authors>
+		<Product>Toosame</Product>
+		<Description>EventBus Abstraction and Interface</Description>
+		<Version>2.0.1</Version>
+		<RepositoryUrl>https://github.com/lhdboy/Toosame.EventBus</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+	</PropertyGroup>
 
 </Project>
