--- a/src/Toosame.EventBus.RabbitMQ/Toosame.EventBus.RabbitMQ.csproj
+++ b/src/Toosame.EventBus.RabbitMQ/Toosame.EventBus.RabbitMQ.csproj
@@ -6,20 +6,20 @@
 		<Authors>Toosame</Authors>
 		<Product>Toosame</Product>
 		<Description>EventBus Implementation of RabbitMQ</Description>
-		<Version>2.0.1</Version>
+		<Version>7.0.0</Version>
 		<RepositoryUrl>https://github.com/lhdboy/Toosame.EventBus</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
-		<PackageReference Include="Polly" Version="7.2.3" />
-		<PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
-		<PackageReference Include="System.Text.Json" Version="7.0.2" />
+		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+		<PackageReference Include="Polly" Version="8.2.0" />
+		<PackageReference Include="RabbitMQ.Client" Version="6.7.0" />
+		<PackageReference Include="System.Text.Json" Version="7.0.4" />
 	</ItemGroup>
 
 	<ItemGroup>
