--- a/src/Toosame.EventBus/Toosame.EventBus.csproj
+++ b/src/Toosame.EventBus/Toosame.EventBus.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net9.0</TargetFramework>
+		<RootNamespace>Toosame.EventBus</RootNamespace>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Authors>Toosame</Authors>
 		<Product>Toosame</Product>
@@ -10,6 +11,7 @@
 		<RepositoryUrl>https://github.com/lhdboy/Toosame.EventBus</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<IsAotCompatible>true</IsAotCompatible>
 	</PropertyGroup>
 
 </Project>
