--- a/src/Toosame.EventBus.RabbitMQ/Toosame.EventBus.RabbitMQ.csproj
+++ b/src/Toosame.EventBus.RabbitMQ/Toosame.EventBus.RabbitMQ.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFrameworks>net10.0;net9.0;net8.0</TargetFrameworks>
 		<RootNamespace>Toosame.EventBus.RabbitMQ</RootNamespace>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Authors>Toosame</Authors>
 		<Product>Toosame</Product>
 		<Description>EventBus Implementation of RabbitMQ</Description>
-		<Version>9.1.0</Version>
+		<Version>9.2.0</Version>
 		<RepositoryUrl>https://github.com/lhdboy/Toosame.EventBus</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -21,8 +21,8 @@
 	</ItemGroup>
 	
 	<ItemGroup>
-		<PackageReference Include="Polly" Version="8.6.3" />
-		<PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
+		<PackageReference Include="Polly" Version="8.6.4" />
+		<PackageReference Include="RabbitMQ.Client" Version="7.2.0" />
 	</ItemGroup>
 
 	<ItemGroup>
