--- a/src/Toosame.EventBus/Toosame.EventBus.csproj
+++ b/src/Toosame.EventBus/Toosame.EventBus.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFrameworks>net10.0;net9.0;net8.0</TargetFrameworks>
 		<RootNamespace>Toosame.EventBus</RootNamespace>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Authors>Toosame</Authors>
 		<Product>Toosame</Product>
 		<Description>EventBus Abstraction and Interface</Description>
-		<Version>2.1.3</Version>
+		<Version>2.2.0</Version>
 		<RepositoryUrl>https://github.com/lhdboy/Toosame.EventBus</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
